# EDB

./: .gitignore  CMakeLists.txt  DB.udb  DevelopingLog.md  LICENCE  README  build.sh  clean.sh
Core/: CMakeLists.txt  Makefile  REPL.c  REPL.h  cmake_install.cmake  compile.c  compile.h  copyright.c  copyright.h  database.c  database.h
Debug/: CMakeLists.txt  Makefile  build_assert.h  cmake_install.cmake  db_log.c  db_log.h  debug.h  errors.h  print_color.h
Libs/: CMakeLists.txt  Makefile  adlist.h  align.h  array_size.h  avl.c  avl.h  avl_dic.c  avl_dic.h  b_tree.c  b_tree.h  bsearch.c  bsearch.h  cmake_install.cmake  defs.h  file_sys.c  file_sys.h  linux_rbtree.c  linux_rbtree.h  list.c  list.h  mathtool.h  mm.c  mm.h  string_db.c  string_db.h  timetool.c  timetool.h  typesafe_cb.h
Src/: CMakeLists.txt  Makefile  __main__.c  __main__.txt  avl_rbt_test_main.c  cmake_install.cmake  database_main.c  main.c  test_main.c
Tests/: main  test.c  test.txt
Tests/alignof_test/: CMakeLists.txt  run.c  tap.h
Tests/avl_test/: CMakeLists.txt  avl.c  avl.h  avl_test.c
Tests/bsearch_test/: CMakeLists.txt  bsearch.h  bsearch_test.c
Tests/cb_test/: CMakeLists.txt  cb_test.c  config.h  typesafe_cb.h
Tests/linux_rbt_test/: linux_rbtree.h  printt.c
UI/: CMakeLists.txt  help.c  help.h  terminal.c  terminal.h
User/: CMakeLists.txt  Makefile  cmake_install.cmake  compile.c  parser.c  parser.h
trash/: avl_dic.c  avl_dic.h
