CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(MY_DataBase)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Libs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Core)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/User)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Debug)


MESSAGE(SOURCE DIR:${PROJECT_SOURCE_DIR})
MESSAGE(BINARY DIR:${PROJECT_BINARY_DIR})


add_definitions(-std=gnu99)

set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGES} -O0 -Wall -g -ggdb")
set(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGES} -O3 -Wall")

ADD_SUBDIRECTORY(./Libs)
ADD_SUBDIRECTORY(./Src)
ADD_SUBDIRECTORY(./Core)
ADD_SUBDIRECTORY(./User)
ADD_SUBDIRECTORY(./Debug)


