#PROJECT_SOURCE_DIR永远是根目录
#需要包含的头文件目录 可以用#include<...>包含
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Libs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Core)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/UI)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/User)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Debug)



#可执行文件放在目录 bin下
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

#当前目录作为可执行目录源文件文件夹，全部用来生成database
ADD_EXECUTABLE(database ${DIR_SRCS})

#链接db_lib db_core db_ui db_user
TARGET_LINK_LIBRARIES(database db_lib)
TARGET_LINK_LIBRARIES(database db_core)
TARGET_LINK_LIBRARIES(database db_ui)
TARGET_LINK_LIBRARIES(database db_user)
TARGET_LINK_LIBRARIES(database db_debug)

